Fixed header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,9 @@
     border-color: #cccccc;
 	text-align: center;
     color: #ffffff;
-	position: relative;
-	right: 330px;
+	position: fixed;
+	float: left;
+	left: 300px;
 }
 
 /*.background {
@@ -36,12 +37,16 @@
 .main-section {
     background-color: #ffffff;
     border-color: #dddddd;
-    width: 650px;
-    height: 415px;
+    width: 960px;
+    height: 500px;
     padding: 10px;
-    margin: auto;
+	margin: auto;
+
 }
 
+form {
+	align: center
+}
 
 .titles {
 	font-family: 'Georgia', Times, Times New Roman, serif;
@@ -52,6 +57,7 @@
 	font-weight: bold;
 }
 
+
 .navigation {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 16px;
@@ -59,9 +65,9 @@
     font-weight: bold;
 	text-align: right;
 	padding: 10px;
-	position: relative;
-		
+
 }
+
 a:hover { 
 	color: blue; 
 }
@@ -71,6 +77,7 @@ a:hover {
 	z-index: 2;
 	float: left;
 	margin: 5px 10px;
+	
 }
 
 p {
@@ -78,7 +85,8 @@ p {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 16px;
 	padding-left: 20px;
-	padding-right: 10px;
+	padding-right: 20px;
+	
 
 }
 
@@ -88,13 +96,18 @@ hr {
 	border: 0;
 	border-top: 2px solid #999999;
 	width: 100%;	
-	padding: 0;
+	padding: 28px 0px 28px 4px;
 	margin: auto;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
 
-
+.line-1 {
+	margin-top: 45px;
+}
+.line-2 {
+	padding-bottom: 5px;
+}
 
 section {
 	font-family: 'Georgia', Times, Times New Roman, serif;
@@ -114,6 +127,7 @@ h4 {
 	height: 30%;
 	margin-left: 20px;
 	margin-bottom: 10px;
+	margin-top: -20px;
 	float: left;
 }
 
@@ -122,6 +136,7 @@ h4 {
 	height: 30%;
 	margin-left: 20px;
 	margin-bottom: 10px;
+	margin-top: -20px;
 	float: left;
 }
 
@@ -130,6 +145,7 @@ h4 {
 	height: 30%;
 	margin-left: 20px;
 	margin-bottom: 10px;
+	margin-top: -20px;
 	float: left;
 }
 
